--- a/week2/doc/dft.tex
+++ b/week2/doc/dft.tex
@@ -3,6 +3,7 @@
 波函数：
 \[ f(t) = A\sin(\omega t + \varphi) + k \]
 
+
 傅里叶展开表达式：
-\[ f(t) = c_{0} \]
+\[ f(t) = c_{0} + \sum_{n=0}^{\infty}c_{n} \cos(n\omega t + \varphi) \]
 \end{document}
