--- a/README.org
+++ b/README.org
@@ -2,3 +2,4 @@
 - [[JPEG DCT, Discrete Cosine Transform (JPEG Pt2)- Computerphile][https://www.youtube.com/watch?v=Q2aEzeMDHMA]]
 - https://zhuanlan.zhihu.com/p/85299446
 - https://www.zhihu.com/question/22085329/answer/774074211
+- [[histogram equalization][https://docs.opencv.org/3.4.15/d4/d1b/tutorial(escape underline)histogram(escape underline)equalization.html]]
