--- a/README.org
+++ b/README.org
@@ -1,3 +1,5 @@
+Stop because I will look the <digital image processing> directly.
+
 * Links
 - [[JPEG DCT, Discrete Cosine Transform (JPEG Pt2)- Computerphile][https://www.youtube.com/watch?v=Q2aEzeMDHMA]]
 - https://zhuanlan.zhihu.com/p/85299446
