--- a/week2/README.org
+++ b/week2/README.org
@@ -1,5 +1,9 @@
+* Big picture
+Image -> Construct n x n subImages -> Forward transform -> Quantizer -> Symbol encoder -> Compressed Image
+Compressed Image -> Symbol decoder -> Inverse transform -> Merge nxn sub images -> Decompressed image
+
 * Goal
 After learn, I want to load an bmp image, and save it as jpg_demo(which do much like jpg compress) and then
 reload and show in ~cv::imshow~. It's a big project. Come on!!
 
-Jump for now, becuase I think it's hard to me, if I can't go on because this. I will go back to see again.
+Jump for now, because I think it's hard to me, if I can't go on because this. I will go back to see again.
